--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -16,7 +16,7 @@ jobs:
         run: yarn
 
       - name: Build
-        run: yarn build
+        run: yarn build && cp public/404.html build/404.html
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
