--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/user-event": "^7.1.2",
     "grommet": "^2.12.0",
     "grommet-icons": "^4.4.0",
+    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-intl": "^4.4.0",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "use-context-selector": "^1.1.1"
   },
   "scripts": {
     "start": "EXTEND_ESLINT=true react-scripts start",
