--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grommet": "^2.12.0",
     "grommet-icons": "^4.4.0",
     "lodash": "^4.17.15",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-intl": "^4.4.0",
