--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.13.1",
     "react-intl": "^4.4.0",
     "react-scripts": "3.4.1",
+    "react-virtualized": "^9.21.2",
     "styled-components": "^5.1.0",
     "use-context-selector": "^1.1.1"
   },
